--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=${DATABASE_DDL_AUTO}
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration,classpath:db/seed
+spring.flyway.validate-on-migrate=true
+spring.flyway.baseline-on-migrate=true
