--- a/package.json
+++ b/package.json
@@ -3,7 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "scripts": {
+    "start": "concurrently \"npm start --prefix client\" \"./backend/gradlew -p backend BootRun\"",
+    "migrate:delete": "./backend/gradlew -p backend flywayClean",
+    "migrate:migrate": "./backend/gradlew -p backend flywayMigrate",
+    "migrate:info": "./backend/gradlew -p backend flywayInfo"
+  },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "concurrently": "^9.1.2"
+  }
 }
