--- a/client/package.json
+++ b/client/package.json
@@ -22,9 +22,11 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@tailwindcss/postcss": "^4.0.0",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "postcss": "^8.5.1",
     "rxjs": "~7.8.0",
+    "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.0.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
